<resources>
    <string name="app_name">Munch</string>
    <string name="action_settings">Settings</string>
    <string name="loading_feeds">Loading feeds</string>
    <string name="cancel">Cancel</string>
    <string name="feed_title">Feed title</string>
    <string name="source">Source</string>
    <string name="source_name">Source name</string>
    <string name="feed_url">Feed url</string>
    <string name="save">Save</string>
    <string name="add_feed_title">Add Feed</string>
    <string name="add_feed">Add your own RSS feed</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto">sans-serif</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="monospace">monospace</string>
    <string name="category">Category</string>
    <string name="add_category">Add a category</string>
    <string name="source_url">Source url</string>
    <string name="pub_date">Publish date</string>
    <string name="clear_feeds">Clear Feeds</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="category_names">
        <item>Automobiles</item>
        <item>Books</item>
        <item>Business</item>
        <item>Climate</item>
        <item>Comics</item>
        <item>Deals</item>
        <item>Economics</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Fashion</item>
        <item>Finance</item>
        <item>Fitness</item>
        <item>Food</item>
        <item>Gadgets</item>
        <item>Gaming</item>
        <item>Hardware</item>
        <item>Health</item>
        <item>International</item>
        <item>Marketing</item>
        <item>Music</item>
        <item>National</item>
        <item>Politics</item>
        <item>Productivity</item>
        <item>Programming</item>
        <item>Research</item>
        <item>Science</item>
        <item>Software</item>
        <item>Space</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="category_drawables">
        <item>@drawable/ic_automobile_24dp</item>
        <item>@drawable/ic_book_24dp</item>
        <item>@drawable/ic_business_24dp</item>
        <item>@drawable/ic_climate_24dp</item>
        <item>@drawable/ic_comics_24dp</item>
        <item>@drawable/ic_deals_24dp</item>
        <item>@drawable/ic_economics_24dp</item>
        <item>@drawable/ic_education_24dp</item>
        <item>@drawable/ic_entertainment_24dp</item>
        <item>@drawable/ic_fashion_24dp</item>
        <item>@drawable/ic_finance_24dp</item>
        <item>@drawable/ic_fitness_24dp</item>
        <item>@drawable/ic_food_24dp</item>
        <item>@drawable/ic_gadgets_24dp</item>
        <item>@drawable/ic_gaming_24dp</item>
        <item>@drawable/ic_hardware_24dp</item>
        <item>@drawable/ic_health_24dp</item>
        <item>@drawable/ic_international_24dp</item>
        <item>@drawable/ic_marketing_24dp</item>
        <item>@drawable/ic_music_24dp</item>
        <item>@drawable/ic_national_24dp</item>
        <item>@drawable/ic_politics_24dp</item>
        <item>@drawable/ic_productivity_24dp</item>
        <item>@drawable/ic_programming_24dp</item>
        <item>@drawable/ic_research_24dp</item>
        <item>@drawable/ic_science_24dp</item>
        <item>@drawable/ic_software_24dp</item>
        <item>@drawable/ic_space_24dp</item>
        <item>@drawable/ic_sports_24dp</item>
        <item>@drawable/ic_technology_24dp</item>
        <item>@drawable/ic_unknown_24dp</item>
    </string-array>
    <string-array name="sources_test">
        <item>All Sources</item>
        <item>Reuters</item>
        <item>BBC India</item>
    </string-array>
    <string-array name="feed_table_columns">
        <item>item_name</item>
        <item>item_desc</item>
        <item>item_link</item>
        <item>item_img_url</item>
        <item>item_category</item>
        <item>item_source</item>
        <item>item_source_url</item>
        <item>item_pub_date</item>
        <item>item_category_img_id</item>
        <item>item_desc_web</item>
    </string-array>
    <string-array name="source_table_columns">
        <item>source_name</item>
        <item>source_url</item>
        <item>source_category</item>
        <item>source_category_img_id</item>
    </string-array>
    <string-array name="article_table_columns">
        <item>article_name</item>
        <item>article_desc</item>
        <item>article_link</item>
        <item>article_img_url</item>
        <item>article_category</item>
        <item>article_source</item>
        <item>article_source_url</item>
        <item>article_pub_date</item>
        <item>article_category_img_id</item>
        <item>article_content</item>
    </string-array>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="action_share">Share</string>
    <string name="action_archive">Archive</string>
    <string name="content">Content</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading</string>
    <string name="nav_feeds">Feeds</string>
    <string name="nav_manage_feeds">Manage Feeds</string>
    <string name="nav_other">Other</string>
    <string name="nav_extra">Extra</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_archive">Archive</string>
    <string name="remove_archive">Remove from archive</string>
    <string name="remove_archive_content">This action will remove this article from your archive permanantly.</string>
    <string name="remove">Remove</string>
    <string name="nav_manage_sources">Manage Sources</string>
    <string name="modify_source">Modify Source</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="sort_feeds">Sort feeds</string>
    <string-array name="sort_feeds_types">
        <item>Randomly</item>
        <item>Feed title</item>
        <item>Category</item>
        <item>Publish Date</item>
    </string-array>
    <string name="perf_ui">User Interface</string>
    <string name="perf_feeds">Feeds</string>
    <string name="perf_feeds_font_size">Feeds Font Size</string>
    <string name="perf_feeds_font_size_desc">Manage font size of RSS feeds</string>
    <string name="perf_feeds_font_size_key">perf_feeds_font_size</string>
    <string-array name="perf_feeds_font_size_entries">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="perf_feeds_font_size_entry_values">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="perf_article">Article</string>
    <string name="perf_article_font_size">Article Font Size</string>
    <string name="perf_article_font_size_desc">Manage font size of article</string>
    <string name="perf_article_font_size_key">perf_article_font_size</string>
    <string name="perf_small">Small</string>
    <string name="perf_medium">Medium</string>
    <string name="perf_feeds_anim">Enable Feeds Animation</string>
    <string name="perf_feeds_anim_desc_enabled">If disabled, feeds won\'t animate, this might reduce lag</string>
    <string name="perf_feeds_anim_desc_disabled">If enabled, feeds will animate, this might generate lag</string>
    <string name="perf_feeds_anim_key">perf_feeds_anim_key</string>
    <string name="perf_sources_anim">Enable Sources Animation</string>
    <string name="perf_sources_anim_desc_enabled">If disabled, sources won\'t animate, this might reduce lag</string>
    <string name="perf_sources_anim_desc_disabled">If enabled, sources will animate, this might generate lag</string>
    <string name="perf_sources_anim_key">perf_sources_anim_key</string>
    <string name="perf_circular_reveal">Enable Circular Reveal Animation</string>
    <string name="perf_circular_reveal_desc_enabled">If disabled, you won\'t see a circular reveal animation on add sources screen</string>
    <string name="perf_circular_reveal_desc_disabled">If enabled, you will see a circular reveal animation on add sources screen</string>
    <string name="perf_circular_reveal_key">perf_circular_reveal_key</string>
    <string name="perf_curated_feeds">Curated Feeds</string>
    <string name="perf_curated_feeds_import">Import Curated feeds</string>
    <string name="perf_curated_feeds_import_desc">Import some of the best Rss feed sources available over the internet</string>
    <string name="perf_curated_feeds_import_key">perf_curated_feeds_import_key</string>
    <string name="perf_curated_feeds_submit">Submit Curated feeds</string>
    <string name="perf_curated_feeds_submit_desc">Submit your own Rss feed sources and help in improving the current curated list</string>
    <string name="perf_curated_feeds_submit_key">perf_curated_feeds_submit_key</string>
    <string name="perf_theme">Manage themes</string>
    <string name="perf_theme_desc">Change the system theme</string>
    <string name="perf_theme_key">perf_theme</string>
    <string name="perf_theme_default_value">Light</string>
    <string name="perf_in_app_browser">Enable In-App Browser</string>
    <string name="perf_in_app_browser_desc_enabled">If disabled, application will open feed links via standard browser</string>
    <string name="perf_in_app_browser_desc_disabled">If enabled, application will open feed links via in-app browser(requires chrome v45+)</string>
    <string name="perf_in_app_browser_key">perf_in_app_browser_key</string>
    <string name="perf_import_opml">Import Opml files</string>
    <string name="perf_import_opml_desc">Import custom feed sources from Opml files, either from a url or a file</string>
    <string name="perf_import_opml_key">perf_import_opml_files</string>
    <string name="perf_import_opml_default_value">Light</string>
    <string name="perf_cache">Enable Feeds Cache</string>
    <string name="perf_cache_desc_enabled">If disabled, application will not store the feeds downloaded in the database</string>
    <string name="perf_cache_desc_disabled">If enabled, application will store the feeds downloaded in the database</string>
    <string name="perf_cache_key">perf_feeds_cache</string>
    <string name="perf_system">System</string>
    <string name="perf_reset_db">Reset Database</string>
    <string name="perf_reset_db_desc">Restore the database to its initial state</string>
    <string name="perf_reset_db_message">This will remove all the values from the database. This incudes deleting your sources, archives and feeds.</string>
    <string name="perf_misc">Miscellaneous</string>
    <string name="perf_feeds_not_working">Feeds not working?</string>
    <string name="perf_feeds_not_working_desc">Not every Rss source will work correctly with the app, so inorder to make it work you need to modify your feeds. Tap here to view the tutorial</string>
    <string name="perf_feeds_not_working_key">perf_feeds_not_working_key</string>
    <string name="action_open_in_browser">Open In Browser</string>
    <string name="refresh">Refresh</string>
    <string name="no_content_available">No Content Available</string>
    <string name="library">Library</string>
    <string name="library_creator">Library Creator</string>
    <string name="library_desc">Library Desc</string>
    <string name="rate">Rate App</string>
    <string name="source_code">Source Code</string>
    <string name="licence">Licence</string>
    <string name="change_log">Change Log</string>
    <string name="sync">Sync</string>
    <string name="contributions">Contributions</string>
</resources>