<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/perf_ui">

        <ListPreference
            android:defaultValue="@string/perf_small"
            android:entries="@array/perf_feeds_font_size_entries"
            android:entryValues="@array/perf_feeds_font_size_entry_values"
            android:key="@string/perf_feeds_font_size_key"
            android:summary="@string/perf_feeds_font_size_desc"
            android:title="@string/perf_feeds_font_size" />

        <ListPreference
            android:defaultValue="@string/perf_medium"
            android:entries="@array/perf_article_font_size_entries"
            android:entryValues="@array/perf_article_font_size_entry_values"
            android:key="@string/perf_article_font_size_key"
            android:summary="@string/perf_article_font_size_desc"
            android:title="@string/perf_article_font_size" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/perf_feeds_anim_key"
            android:summaryOff="@string/perf_feeds_anim_desc_disabled"
            android:summaryOn="@string/perf_feeds_anim_desc_enabled"
            android:title="@string/perf_feeds_anim" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/perf_sources_anim_key"
            android:summaryOff="@string/perf_sources_anim_desc_disabled"
            android:summaryOn="@string/perf_sources_anim_desc_enabled"
            android:title="@string/perf_sources_anim" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/perf_circular_reveal_key"
            android:summaryOff="@string/perf_circular_reveal_desc_disabled"
            android:summaryOn="@string/perf_circular_reveal_desc_enabled"
            android:title="@string/perf_circular_reveal" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/perf_curated_feeds">

        <MultiSelectListPreference
            android:defaultValue="@array/perf_curated_feeds_import_empty"
            android:dialogTitle="@string/perf_curated_feeds_import"
            android:entries="@array/perf_curated_feeds_import_empty"
            android:entryValues="@array/perf_curated_feeds_import_empty"
            android:key="@string/perf_curated_feeds_import_key"
            android:summary="@string/perf_curated_feeds_import_desc"
            android:title="@string/perf_curated_feeds_import" />

        <MultiSelectListPreference
            android:defaultValue="@array/perf_curated_feeds_submit_empty"
            android:dialogTitle="@string/perf_curated_feeds_submit"
            android:entries="@array/perf_curated_feeds_submit_empty"
            android:entryValues="@array/perf_curated_feeds_submit_empty"
            android:key="@string/perf_curated_feeds_submit_key"
            android:summary="@string/perf_curated_feeds_submit_desc"
            android:title="@string/perf_curated_feeds_submit" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/perf_system">

        <com.crazyhitty.chdev.ks.munch.ui.views.CustomListPreferenceDialog
            android:defaultValue="@string/perf_theme_default_value"
            android:entries="@array/perf_theme_entries"
            android:entryValues="@array/perf_theme_values"
            android:key="@string/perf_theme_key"
            android:summary="@string/perf_theme_desc"
            android:title="@string/perf_theme" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/perf_cache_key"
            android:summaryOff="@string/perf_cache_desc_disabled"
            android:summaryOn="@string/perf_cache_desc_enabled"
            android:title="@string/perf_cache" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/perf_in_app_browser_key"
            android:summaryOff="@string/perf_in_app_browser_desc_disabled"
            android:summaryOn="@string/perf_in_app_browser_desc_enabled"
            android:title="@string/perf_in_app_browser" />


        <ListPreference
            android:defaultValue="@string/perf_import_opml_default_value"
            android:entries="@array/perf_import_opml_entries"
            android:entryValues="@array/perf_import_opml_values"
            android:key="@string/perf_import_opml_key"
            android:summary="@string/perf_import_opml_desc"
            android:title="@string/perf_import_opml" />

        <com.crazyhitty.chdev.ks.munch.ui.views.CustomPreferenceDialog
            android:dialogMessage="@string/perf_reset_db_message"
            android:dialogTitle="@string/perf_reset_db"
            android:summary="@string/perf_reset_db_desc"
            android:title="@string/perf_reset_db" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/perf_misc">

        <Preference
            android:key="@string/perf_feeds_not_working_key"
            android:summary="@string/perf_feeds_not_working_desc"
            android:title="@string/perf_feeds_not_working" />

    </PreferenceCategory>

</PreferenceScreen>