<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FeedsActivity">
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="1"
        android:title="@string/rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_log"
        android:orderInCategory="2"
        android:title="@string/change_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_source_code"
        android:orderInCategory="3"
        android:title="@string/source_code"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contributions"
        android:orderInCategory="4"
        android:title="@string/contributions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_licence"
        android:orderInCategory="5"
        android:title="@string/licence"
        app:showAsAction="never" />
</menu>
