<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FeedsActivity">
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync_white_24dp"
        android:orderInCategory="1"
        android:title="@string/sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_reorder_24dp"
        android:orderInCategory="2"
        android:title="@string/sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:orderInCategory="3"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_feeds"
        android:icon="@drawable/ic_clear_all_24dp"
        android:orderInCategory="4"
        android:title="@string/clear_feeds"
        app:showAsAction="never" />
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="2" app:showAsAction="never" />-->
</menu>
