<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_small" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_library_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/library"
                android:textSize="@dimen/text_size_avg" />

            <TextView
                android:id="@+id/text_view_library_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/library_creator"
                android:textSize="@dimen/text_size_avg" />

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_small" />

        <TextView
            android:id="@+id/text_view_library_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_desc"
            android:textSize="@dimen/text_size_small" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_small" />

        <View style="@style/Divider" />

    </LinearLayout>

</FrameLayout>