<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.crazyhitty.chdev.ks.munch.ui.activities.ArticleActivity"
    tools:showIn="@layout/activity_article">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_avg"
            android:paddingRight="@dimen/padding_avg">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_avg" />

            <TextView
                android:id="@+id/text_view_feed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_avg" />

            <View style="@style/Divider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_feed_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/category"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/text_view_feed_pub_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/pub_date"
                    android:textSize="@dimen/text_size_small" />

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_avg" />

            <TextView
                android:id="@+id/text_view_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_content_available"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_size_avg" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
