<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout_feed_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/image_view_category_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sample_circle" />

                <ImageView
                    android:id="@+id/image_view_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <Space
                android:layout_width="@dimen/space_small"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_view_feed_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/source"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_min" />

                    <TextView
                        android:id="@+id/text_view_feed_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/category"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_min" />

                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_min" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_view_feed_source_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/source_url"
                        android:textColor="@color/md_grey_500"
                        android:textSize="@dimen/text_size_min" />

                    <TextView
                        android:id="@+id/text_view_feed_pub_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/pub_date"
                        android:textColor="@color/md_grey_500"
                        android:textSize="@dimen/text_size_min" />

                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_min" />

                <TextView
                    android:id="@+id/text_view_feed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feed_title"
                    android:textSize="@dimen/text_size_small" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_small" />

        <View
            style="@style/Divider"
            android:layout_marginLeft="@dimen/margin_huge" />

    </LinearLayout>

</FrameLayout>